[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/speech_menu.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/comic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/speech_menu/speech_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="speech_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 55.6756 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 4.76007
margin_top = 545.817
margin_right = 1359.76
margin_bottom = 767.817
texture = ExtResource( 1 )

[node name="menyval1" type="Button" parent="."]
margin_left = 57.9772
margin_top = 589.344
margin_right = 162.977
margin_bottom = 618.344
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Menyval ett!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menyval2" type="Button" parent="."]
margin_left = 57.1627
margin_top = 629.255
margin_right = 162.163
margin_bottom = 658.255
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Menyval tv√•!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menyval3" type="Button" parent="."]
margin_left = 55.5337
margin_top = 671.61
margin_right = 160.534
margin_bottom = 700.61
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Menyval tre!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
